fix bug with burger UA version

--- a/index-ua.html
+++ b/index-ua.html
@@ -44,22 +44,22 @@
                             <i class="dropdown__icon"></i>UA
                         </a>
                     </div>
-
-
-                    <button class="header__burger" aria-label="Відкрити меню">
-                        <span class="header__burger-line"></span>
-                        <span class="header__burger-line"></span>
-                        <span class="header__burger-line"></span>
-                    </button>
-
-                    <nav class="header__nav header__nav--mobile">
-                        <a href="#home" class="header__link header__link--active">Головна</a>
-                        <a href="#airdrop" class="header__link">Airdrop</a>
-                        <a href="#gallery" class="header__link">Галерея</a>
-                        <a href="#help" class="header__link">Допомога</a>
-                        <a href="https://ethereumclassic.org/" class="header__link" target="_blank">Вебсайт</a>
-                    </nav>
                 </div>
+
+                <button class="header__burger" aria-label="Відкрити меню">
+                    <span class="header__burger-line"></span>
+                    <span class="header__burger-line"></span>
+                    <span class="header__burger-line"></span>
+                </button>
+
+                <nav class="header__nav header__nav--mobile">
+                    <a href="#home" class="header__link header__link--active">Головна</a>
+                    <a href="#airdrop" class="header__link">Airdrop</a>
+                    <a href="#gallery" class="header__link">Галерея</a>
+                    <a href="#help" class="header__link">Допомога</a>
+                    <a href="https://ethereumclassic.org/" class="header__link" target="_blank">Вебсайт</a>
+                </nav>
+            </div>
         </header>
 
         <section id="home" class="block block--home">
