add favicon png

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
         crossorigin="anonymous"></script>
-
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <title>ETC Airdrop</title>
 </head>
 
@@ -46,9 +48,6 @@
                         </a>
                     </div>
                 </div>
-
-
-
 
                 <!-- Бургер-меню -->
                 <button class="header__burger" aria-label="Open menu">
@@ -230,7 +229,7 @@
 
 
         <div id="scrollToTop" class="scroll-to-top">
-            &#8679; <!-- або встав SVG-іконку -->
+            &#8679;
         </div>
 
     </div>
